# tuimail

./: .gitignore  ARCHITECTURE.md  ASYNC_GRAMMAR.md  AUTO_SYNC.md  CC_BCC_IMPLEMENTATION.md  CODE_FLOW.md  Cargo.toml  DATABASE_SYNC_ARCHITECTURE.md  DATABASE_SYNC_IMPLEMENTATION.md  DEBUG_EMAIL_PARSING.md  DEBUG_GUIDE.md  DELETE_CONFIRMATION.md  DIRTY_FLAG_OPTIMIZATION.md  EMAIL_PERSISTENCE_FIXES.md  EMAIL_SELECTION_FIX.md  EMAIL_SYNC_FIXES_APPLIED.md  EMAIL_SYNC_SOLUTION.md  FILE_BROWSER_FIX.md  FIXES_SUMMARY.md  IMAP_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INCREMENTAL_SYNC.md  NEWLINE_FIX.md  OVERFLOW_FIXES.md  PAGINATION_SUMMARY.md  PERFORMANCE_FIXES_APPLIED.md  PERFORMANCE_IMPROVEMENTS.md  README.md  REPLY_FIXES.md  SYNC_ARCHITECTURE_SUMMARY.md  SYNC_DAEMON_GUIDE.md  SYNC_OPTIMIZATION.md  UI_IMPROVEMENTS.md  build.rs  create_test_email.txt  dd.json  debug_email.sh  fix_draychawdhuri_sync.sh  fix_ui_panic.patch  monitor_sync.sh  (+30 more)
resources/: additional-common.txt  technical-terms.txt
src/: app.rs  async_grammar.rs  config.rs  credentials.rs  database.rs  email.rs  grammarcheck.rs  lib.rs  main.rs  spellcheck.rs  test_parsing.rs  ui.rs  ui_changes.rs
test_files/: config.json  large_file.txt
