[package]
name = "email_client"
version = "0.1.0"
edition = "2021"
description = "A terminal UI email client with IMAP and SMTP support"
authors = ["Your Name"]

[dependencies]
# Terminal UI
crossterm = "0.27"
ratatui = "0.24"

# Email protocols
imap = "2.4"
native-tls = "0.2"
lettre = { version = "0.10", features = ["builder", "smtp-transport", "tokio1-native-tls"] }
mail-parser = "0.8"

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
shellexpand = "3.1"

# Secure password storage
keyring = "2.3"
